cyclonedds-macros/tests/compilation-failure/topicable_struct_with_unnamed_fields.stderr
error: Unsupported shape `unnamed fields`. Expected named fields.
 --> tests/compilation-failure/topicable_struct_with_unnamed_fields.rs:3:10
  |
3 | #[derive(Topicable)]
  |          ^^^^^^^^^
  |
  = note: this error originates in the derive macro `Topicable` (in Nightly builds, run with -Z macro-backtrace for more info)
