cyclonedds-macros/tests/compilation-failure/topicable_struct_with_unnamed_fields.rs
use cyclonedds_macros::Topicable;

#[derive(Topicable)]
struct Data(i32, u32);

fn main() {}
